--- a/aggrageteWordCloud.html
+++ b/aggrageteWordCloud.html
@@ -1,32 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="frinteridades.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.9.0/d3.min.js"></script>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-cloud/1.2.5/d3.layout.cloud.min.js"></script>
-    <title>Key Words</title>
+    <title>Aggregate</title>
 </head>
-
 <body>
-    <div hidden class="card mb-3 align-center text-center">
-        <!--<img src="/pexels-jplenio-1632790.jpg" class="card-img-top" alt="big old tree, looking up through the canopy">-->
-        <div class="card-body">
-          <h5 class="card-title">Aggragete</h5>
-          <p class="card-text">We can take all the data and make one large word cloud based on key word frequencies. Like the most popular words from across all the projects.</p> <a class="btn btn-ssm btn-primary" href="/aggrageteWordCloud.html">Go</a>
-        </div>
-      </div>
-    
-    <div id="charts-container"></div>
-
-    <script src="fronteridades.js"></script>
-
+    <h1>Aggregate Word Cloud</h1>
+    <div id="charts-container">
+        <canvas id="aggregateWordCloud" width="900" height="400"></canvas>
+        <canvas id="aggregateBarChart" width="900" height="400"></canvas>
+    </div>
+      <script src="fronteridades.js"></script>
 </body>
-
 </html>
+
