--- a/fronteridades.html
+++ b/fronteridades.html
@@ -15,8 +15,7 @@
 </head>
 
 <body>
-    <div hidden class="card mb-3 align-center text-center">
-        <!--<img src="/pexels-jplenio-1632790.jpg" class="card-img-top" alt="big old tree, looking up through the canopy">-->
+    <div class="card mb-3 align-center text-center">
         <div class="card-body">
           <h5 class="card-title">Aggragete</h5>
           <p class="card-text">We can take all the data and make one large word cloud based on key word frequencies. Like the most popular words from across all the projects.</p> <a class="btn btn-ssm btn-primary" href="/aggrageteWordCloud.html">Go</a>
