--- a/aggrageteWordCloud.html
+++ b/aggrageteWordCloud.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,17 +8,175 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.9.0/d3.min.js"></script>    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.9.0/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-cloud/1.2.5/d3.layout.cloud.min.js"></script>
     <title>Aggregate</title>
-</head>
-<body>
-    <h1>Aggregate Word Cloud</h1>
-    <div id="charts-container">
-        <canvas id="aggregateWordCloud" width="900" height="400"></canvas>
-        <canvas id="aggregateBarChart" width="900" height="400"></canvas>
-    </div>
-      <script src="fronteridades.js"></script>
-</body>
-</html>
 
+    <style>
+        /* Styling for rows and columns */
+        .row {
+            display: flex;
+            flex-wrap: wrap;
+        }
+
+        .column {
+            flex: 50%;
+            /* Adjust as needed for two columns */
+            padding: 10px;
+        }
+
+        .chart {
+            margin: 20px;
+            border: 1px solid #ccc;
+            padding: 10px;
+        }
+
+        #word-cloud {
+            width: 100%;
+            height: 100vh; /* Full viewport height */
+        }
+
+        svg {
+            width: 100%;
+            height: 100%;
+        }
+
+    </style>
+
+</head>
+
+<body>
+
+    <h1>Keyword Frequency Aggregation</h1>
+
+    <!-- Two rows for visualizations -->
+    <div class="row">
+        <!-- First row: Bar Chart -->
+        <div class="column">
+            <div id="bar-chart" class="chart"></div>
+        </div>
+        <!-- First row: Word Cloud -->
+        <div class="column">
+            <div id="word-cloud" class="chart"></div>
+        </div>
+    </div>
+
+    <script>
+        // Load keyword frequency from localStorage
+        document.addEventListener("DOMContentLoaded", function () {
+            const storedKeywordFrequency = localStorage.getItem('totalKeywordFrequency');
+            if (storedKeywordFrequency) {
+                const totalKeywordFrequency = JSON.parse(storedKeywordFrequency);
+                // Sort and select top 50 keywords
+                const topKeywords = getTopKeywords(totalKeywordFrequency, 50);
+                displayBarChart(topKeywords);  // Pass the top 50 keywords to displayBarChart
+                displayWordCloud(topKeywords);  // Pass the top 50 keywords to displayWordCloud
+            }
+        });
+
+        // Helper function to get top N keywords by frequency
+        function getTopKeywords(totalKeywordFrequency, n) {
+            // Convert the object to an array and sort by frequency in descending order
+            const sortedKeywords = Object.entries(totalKeywordFrequency)
+                .sort((a, b) => b[1] - a[1]);  // Sort by frequency, highest to lowest
+
+            // Take the top N keywords
+            return sortedKeywords.slice(0, n);
+        }
+
+        // Function to display the bar chart using D3.js for top 50 keywords
+        function displayBarChart(topKeywords) {
+            const data = topKeywords.map(([key, value]) => ({ keyword: key, frequency: value }));
+
+            const margin = { top: 20, right: 30, bottom: 40, left: 90 };
+            const width = 500 - margin.left - margin.right;
+            const height = 400 - margin.top - margin.bottom;
+
+            const svg = d3.select("#bar-chart")
+                .append("svg")
+                .attr("width", width + margin.left + margin.right)
+                .attr("height", height + margin.top + margin.bottom)
+                .append("g")
+                .attr("transform", `translate(${margin.left},${margin.top})`);
+
+            const x = d3.scaleLinear()
+                .domain([0, d3.max(data, d => d.frequency)])
+                .range([0, width]);
+
+            const y = d3.scaleBand()
+                .domain(data.map(d => d.keyword))
+                .range([0, height])
+                .padding(0.1);
+
+            svg.append("g")
+                .call(d3.axisLeft(y));
+
+            svg.selectAll("rect")
+                .data(data)
+                .enter()
+                .append("rect")
+                .attr("y", d => y(d.keyword))
+                .attr("width", d => x(d.frequency))
+                .attr("height", y.bandwidth())
+                .attr("fill", "#69b3a2")
+
+            svg.append("g")
+                .attr("transform", `translate(0,${height})`)
+                .call(d3.axisBottom(x));
+        }
+
+        // Function to create a word cloud using D3.js
+        function createWordCloud(topKeywords) {
+            const wordCloudDiv = document.getElementById('word-cloud');
+            const width = wordCloudDiv.clientWidth;
+            const height = wordCloudDiv.clientHeight;
+
+            const layout = d3.layout.cloud()
+                .size([width, height])
+                .words(topKeywords.map(([keyword, frequency]) => ({
+                    text: keyword,
+                    size: 2 + frequency * 0.5, // Adjust size
+                })))
+                .padding(5)
+                .rotate(() => ~~(Math.random() * 2) * 42) // Random rotation
+                .font("Impact")
+                .fontSize(d => d.size)
+                .on("end", draw);
+
+            layout.start();
+
+            function draw(words) {
+                d3.select("#word-cloud").html(''); // Clear any previous word clouds
+                d3.select("#word-cloud").append("svg")
+                    .attr("width", width)
+                    .attr("height", height)
+                    .append("g")
+                    .attr("transform", `translate(${width / 2},${height / 2})`)
+                    .selectAll("text")
+                    .data(words)
+                    .enter().append("text")
+                    .style("font-size", d => `${d.size}px`)
+                    .style("font-family", "Impact")
+                    .style("fill", () => `hsl(${Math.random() * 360},100%,50%)`)
+                    .attr("text-anchor", "middle")
+                    .attr("transform", d => `translate(${[d.x, d.y]})rotate(${d.rotate})`)
+                    .text(d => d.text);
+            }
+        }
+
+        // Load keyword frequency from localStorage after the DOM is ready
+        document.addEventListener("DOMContentLoaded", function () {
+            const storedKeywordFrequency = localStorage.getItem('totalKeywordFrequency');
+            if (storedKeywordFrequency) {
+                const totalKeywordFrequency = JSON.parse(storedKeywordFrequency);
+                const topKeywords = getTopKeywords(totalKeywordFrequency, 50);
+                createWordCloud(topKeywords);  // Create the word cloud
+            } else {
+                console.error('No keyword frequency data found in localStorage.');
+            }
+        });
+
+    </script>
+</body>
+
+</html>
