--- a/insideWorkStuff/sideBarTest.html
+++ b/insideWorkStuff/sideBarTest.html
@@ -107,10 +107,16 @@
           </div>
           <!-- Research Projects Column -->
           <div class="col px-1" id="categories">
-            <h6 class="bg-primary text-white p-2 text-center border border-3">
-              Research <br />
-              Projects
-            </h6>
+
+            <h6
+            class="bg-primary text-white p-2 text-center border border-3"
+            role="button"
+            onclick="showContent('Research Projects', '')"
+          >
+            Research <br />
+            Projects
+          </h6>
+            
             <ul class="list-group list-group-flush fw-bold">
               <li
                 class="list-group-item list-group-item-dark list-group-item-action"
