--- a/insideWorkStuff/sideBarTest.html
+++ b/insideWorkStuff/sideBarTest.html
@@ -171,9 +171,14 @@
           </div>
           <!-- Education and Community Outreach Projects Column -->
           <div class="col px-1" id="categories" style="overflow-y: hidden">
-            <h6 class="bg-primary text-white p-2 text-center border border-3">
-              Education and Outreach
-            </h6>
+            <h6
+            class="bg-primary text-white p-2 text-center border border-3"
+            role="button"
+            onclick="showContent('Education and Community Outreach', '')"
+          >
+          Education &<br />
+          Outreach
+          </h6>
             <ul class="list-group list-group-flush fw-bold">
               <li
                 class="list-group-item list-group-item-dark list-group-item-action"
