more fkn buttons!

--- a/insideWorkStuff/sideBarTest.html
+++ b/insideWorkStuff/sideBarTest.html
@@ -183,21 +183,21 @@
               <li
                 class="list-group-item list-group-item-dark list-group-item-action"
                 role="button"
-                onclick="showContent('Education & Community Outreach', 'Speaker Series')"
+                onclick="showContent('Education and Community Outreach', 'Speaker Series')"
               >
                 Speaker Series
               </li>
               <li
                 class="list-group-item list-group-item-light list-group-item-action"
                 role="button"
-                onclick="showContent('Education & Community Outreach', 'Experiential Leanring')"
+                onclick="showContent('Education and Community Outreach', 'Experiential Leanring')"
               >
                 Experiential Leanring
               </li>
               <li
                 class="list-group-item list-group-item-dark list-group-item-action"
                 role="button"
-                onclick="showContent('Education & Community Outreach', 'Community Engagement')"
+                onclick="showContent('Education and Community Outreach', 'Community Engagement')"
               >
                 Community Engagement
               </li>
